# NulixLang

./: .gitignore  CMakeLists.txt  README.md  build.cmd  directory.build.props  test.nx
spec/: nulix_spec_v_0_2.md
src/: codegen.cpp  codegen.h  lexer.l  main.cpp  parser.y
